--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -81,6 +81,14 @@ a .icon-loading,
   display: inline-block;
   word-break: break-all;
 }
+.alert textarea {
+  width: 100%;
+  height: 4em;
+}
+.alert .btn-link {
+  color: #000;
+  opacity: 0.2;
+}
 
 .modal-footer {
   margin-top: 0;
@@ -218,7 +226,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 5em;
+  height: 4em;
   padding-left: 30px;
   color: #999;
   font-size: smaller;
