--- a/app/views/error.html
+++ b/app/views/error.html
@@ -2,8 +2,9 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="alert alert-danger">
       <h4>Plugin loading failed :(</h4> {{error.message}}
+      <ng-include src="'views/debug.button.html'"></ng-include>
     </div>
-  </div>
+    <ng-include src="'views/debug.log.html'"></ng-include>
 </div>
 
 <div ng-if="!installed">
