Log: Alert is now blue (was red); aligned footer link to the right.

--- a/app/views/debug.link.html
+++ b/app/views/debug.link.html
@@ -1,4 +1,4 @@
 <span ng-controller="DebugCtrl"
     ng-cloak>
-    <a href="javascript:void(0)" ng-click="debug.toggle()">log</a>
+    <a href="javascript:void(0)" ng-click="debug.toggle()">Show log</a>
 </span>
