--- a/app/views/debug.log.html
+++ b/app/views/debug.log.html
@@ -1,6 +1,6 @@
 <div ng-controller="DebugCtrl"
     ng-cloak>
-    <div class="alert alert-flash alert-danger"
+    <div class="alert alert-flash alert-info"
         ng-if="debug.visible">
         <button type="button" class="close"
             ng-click="debug.toggle()">
