Require device disconnect to forget it

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -4,13 +4,7 @@
     <ol class="breadcrumb">
       <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
       <li class="active">{{account.label()}}</li>
-      <li class="pull-right">
-        <a href=""
-           class="text-muted"
-           title="Forget this device"
-           ng-click="forgetDevice()"
-          ><span class="glyphicon glyphicon-log-out"></span> Forget device</a>
-      </li>
+      <ng-include src="'views/device/forget.link.html'"></ng-include>
     </ol>
     <div class="alert alert-danger alert-inconsistent"
          ng-show="account.isInconsistent()">
