--- a/app/views/device/load.html
+++ b/app/views/device/load.html
@@ -3,13 +3,7 @@
   <ol class="breadcrumb">
     <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
     <li class="active">Load device</li>
-    <li class="pull-right">
-      <a href=""
-         class="text-muted"
-         title="Forget this device"
-         ng-click="forgetDevice()"
-        ><span class="glyphicon glyphicon-log-out"></span> Forget device</a>
-    </li>
+    <ng-include src="'views/device/forget.link.html'"></ng-include>
   </ol>
   <div ng-if="!device.isConnected()" class="alert alert-warning">
     <strong>Please connect your device</strong> to access this section.
