--- a/app/views/modal/forget.html
+++ b/app/views/modal/forget.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
   <button type="button" class="close" title="Cancel"
     ng-click="$dismiss()">&times;</button>
-  <h4 class="modal-title">Forget device</h4>
+  <h4 class="modal-title">Disconnect your Trezor now</h4>
 </div>
 <div class="modal-body">
-  Disconnect device to forget it.
+  The Web Wallet will forget your Trezor right after you disconnect it.
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="$dismiss()">Cancel</button>
+  <button type="button" class="btn btn-default pull-left" ng-click="$dismiss()">Cancel</button>
 </div>
